feat: 会话数据本地持久化

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
     sdk: flutter
   intl: any
   font_awesome_flutter: ^10.4.0
+  sqflite: ^2.2.6
 
 dev_dependencies:
   flutter_test:
