feat: 修复数据库错误

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: any
   font_awesome_flutter: ^10.4.0
   sqflite: ^2.2.6
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
