feat: 给Android添加网络访问权限

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_chatgpt">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="flutter_chatgpt"
         android:name="${applicationName}"
