--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,26 +3,25 @@ on: push
 
 
 jobs:
-  build-and-test:
+  build-Android:
     name: build Android
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: install dependencies
-        uses: steebchen/flutter@v1.1.0
-        with:
-          args: pub get
-
-      - name: run tests
-        uses: steebchen/flutter@v1.1.0
-        with:
-          args: test
-
-      - name: build apk
-        uses: steebchen/flutter@v1.1.0
-        with:
-          args: build apk --release
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v2
+      with:
+          channel: 'stable'
+    - run: flutter pub get
+    - run: flutter test
+    - run: flutter build apk
+    - uses: skx/github-action-publish-binaries@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        args: 'build/app/outputs/apk/release/app-release.apk'
 
   build-ios:
     name: Build iOS app
@@ -59,5 +58,5 @@ jobs:
           architecture: x64
       - run: flutter config --enable-macos-desktop
       - run: flutter build macos
-
+      
 
