--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: "1.1.0+1"
+version: "1.2.0+1"
 
 environment:
   sdk: ">=2.19.2 <3.0.0"
@@ -53,6 +53,7 @@ dependencies:
   flutter_math_fork: ^0.6.3+1
   markdown: ^7.0.2
   flutter_launcher_icons: ^0.13.1
+  package_info_plus: ^3.1.2
 
 dev_dependencies:
   flutter_test:
