--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "cSpell.words": [
-        "autovalidate",
-        "chatgpt",
-        "easyloading",
-        "sqflite"
-    ]
+  "cSpell.words": ["autovalidate", "chatgpt", "easyloading", "Getx", "sqflite"]
 }
