subject: feat(database): Add support for sqflite_common_ffi for desktop OS body: - Add sqflite_common_ffi package to pubspec.yaml for desktop OS support - Initialize and use sqflite_ffi database factory in conversation.dart for Windows, Linux, and macOS - Call ForceRedraw() on flutter_controller_ to ensure a frame is pending and window is shown on Windows - Fixes desktop OS support for the app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flex_color_scheme: ^7.0.5
   get_storage: ^2.1.1
   dart_openai: ^1.9.92
+  sqflite_common_ffi: ^2.2.5
 
 dev_dependencies:
   flutter_test:
