--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: "1.4.4+1"
+version: "1.4.5+1"
 
 environment:
   sdk: ">=2.19.2 <3.0.0"
@@ -51,6 +51,7 @@ dependencies:
   flex_color_scheme: ^7.0.5
   get_storage: ^2.1.1
   dart_openai: ^1.9.92
+  vibration: ^1.8.1
 
 dev_dependencies:
   flutter_test:
